# src/main/java/com/deemor/ttsai/service/request/RequestService.java
@@ -3,12 +3,16 @@ package com.deemor.ttsai.service.request;
 import com.deemor.ttsai.configuration.RabbitMqConfiguration;
 import com.deemor.ttsai.dto.request.RequestDto;
 import com.deemor.ttsai.dto.request.RequestPage;
+import com.deemor.ttsai.entity.alert.Alert;
+import com.deemor.ttsai.entity.alert.AlertStatus;
 import com.deemor.ttsai.entity.request.Request;
 import com.deemor.ttsai.entity.request.RequestStatus;
+import com.deemor.ttsai.exception.request.RequestNotValidException;
 import com.deemor.ttsai.exception.request.RequestStatusException;
 import com.deemor.ttsai.exception.voice.AiVoiceNotFoundException;
 import com.deemor.ttsai.mapper.RequestMapper;
 import com.deemor.ttsai.repository.AiVoiceRepository;
+import com.deemor.ttsai.repository.AlertRepository;
 import com.deemor.ttsai.repository.RequestRepository;
 import com.deemor.ttsai.exception.request.RequestNotFoundException;
 import lombok.AllArgsConstructor;
@@ -20,6 +24,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.Optional;
 
 @Service
 @AllArgsConstructor
@@ -27,6 +32,7 @@ import java.time.LocalDateTime;
 public class RequestService {
 
     private final RequestRepository requestRepository;
+    private final AlertRepository alertRepository;
     private final RequestMapper requestMapper;
     private final RabbitTemplate template;
     private final AiVoiceRepository aiVoiceRepository;
@@ -44,14 +50,49 @@ public class RequestService {
 
     public RequestDto addRequest(RequestDto requestDto) {
         Request request = requestMapper.mapToEntity(requestDto);
+        if (request != null) {
+            if (request.getMessage().isBlank()) {
+                throw new RequestNotValidException("Message not valid. Message is blank.");
+            }
+        } else {
+            throw new RequestNotValidException("message is null");
+        }
+
         request.setDateOfCreation(LocalDateTime.now());
         request.setId(null);
-        request.setRequestStatus(RequestStatus.NEW);
+        request.setRequestStatus(requestDto.getRequestStatus()); //DEV VERSION. CHANGE: requestDto.getRequestStatus() -> RequestStatus.NEW
         request.setVoiceType(request.getVoiceType().toUpperCase());
 
         aiVoiceRepository.findFirstByName(request.getVoiceType()).orElseThrow(AiVoiceNotFoundException::new);
 
-        return requestMapper.mapToDto(requestRepository.save(request));
+        Request savedRequest;
+
+        if (useDuplicatedAlert(requestDto)) {
+            request.setRequestStatus(RequestStatus.AUTO_ACCEPTED);
+            savedRequest = requestRepository.save(request);
+            log.info("OPTIMIZED. DUPLICATED TTS FOUND");
+        } else {
+            savedRequest = requestRepository.save(request);
+            //DEV VERSION
+            if (savedRequest.getRequestStatus().equals(RequestStatus.ACCEPTED)) {
+                template.convertAndSend(RabbitMqConfiguration.REQUEST_TO_ALERT_QUEUE_NAME, request);
+            }
+            //END OF DEV VERSION
+        }
+
+        return requestMapper.mapToDto(savedRequest);
+    }
+
+    private boolean useDuplicatedAlert(RequestDto requestDto) {
+        Optional<Alert> duplicatedAlert = alertRepository.findFirstByVoiceTypeAndMessage(requestDto.getVoiceType().toUpperCase(), requestDto.getMessage());
+        if (duplicatedAlert.isPresent()) {
+            Alert alert = duplicatedAlert.get();
+            alert.setAlertStatus(AlertStatus.NEW);
+            alertRepository.save(alert);
+            return true;
+        }
+
+        return false;
     }
 
     public void deleteRequestById(Long requestId) {
